Fixed display bugs on mobile browsers

--- a/Phase 13.styles.actionpanel.css
+++ b/Phase 13.styles.actionpanel.css
@@ -77,6 +77,6 @@ div.st-panel {
 }
 
 .grid-desktop {
-    /* visibility: collapse; */
+    visibility: collapse;
     max-height: 0px;
 }
