--- a/Phase 13.styles.responsive.css
+++ b/Phase 13.styles.responsive.css
@@ -138,6 +138,6 @@
     }
     .grid-desktop {
         visibility: visible;
-        max-height: fit-content;
+        max-height: 124px;
     }
 }
